# cvlr-test

./: .gitignore  Cargo.toml  justfile
certora/summaries/: cvlr_inlining_core.txt  cvlr_summaries_core.txt
cvlr-solana-test/: Cargo.toml  certora_build.py  justfile
cvlr-solana-test/certora/confs/: justfile  run.conf
cvlr-solana-test/src/: accounts.rs  lib.rs
cvlr-test/: Cargo.toml  certora_build.py  certora_cargo_build.py  justfile
cvlr-test/certora/confs/: justfile  run.conf  safe_rules.conf
cvlr-test/src/: arithmetic.rs  asserts.rs  fee_spec.rs  fee_spec_ok.rs  inflation.rs  lib.rs  log.rs  some_fee.rs  transfer_fee.rs  vault_spec.rs  very_simple_fee.rs
cvlr-test/src/certora/: mocks.rs
just/: build.just  certoraDevVerify.just  certoraSolanaProver.just  main.just
