[package]
name = "cvlr-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "cvlr_test"

[features]
certora = []
certora-vacuity = ["cvlr/vacuity"]
certora-test = []
rt = ["cvlr/rt", "cvlr-fixed/rt"]

[dependencies]
cvlr = { workspace = true }
cvlr-fixed = { workspace = true }

[package.metadata.certora]
sources = [
    "src/**/*.rs",
    "Cargo.toml",
]
solana_inlining = "certora/cvlr_inlining.txt"
solana_summaries = "certora/cvlr_summaries.txt"